fixed contact h2 alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,8 @@ header {
     background-color: var(--dark-color);
     height: 100px;
     padding: 20px;
+    width: 100%;
+    margin: 10px;
 }
 header h1 {
    display: flex;
@@ -62,7 +64,9 @@ header nav ul li a{
     height: 400px;
     width: 100%;
     background-size: cover;
-    background-image: url("../images/hero-bg.jpg");  
+    background-image: url("../images/hero-bg.jpg"); 
+    margin: 10px; 
+    padding: 20px;
 }
 .hero h1 {
     display: flex;
@@ -197,7 +201,7 @@ object section {
     margin: 10px;
     text-align: right;
     width: 20%;
-    border-right: 2px solid var(--dark-color);
+    border-right: 2px solid #4f99cc;
 }
 
  address {
@@ -244,3 +248,122 @@ footer {
     background-image: url("../images/profilepic.jpeg")
     
 } 
+
+/*Media query for small computers*/
+@media screen and (max-width: 968px) {
+
+    .about h2 {
+        width: 80%;
+        justify-content: center;
+        border-bottom: solid 2px #4f99cc;
+        border-right:none;
+        text-align: center;
+    }
+    .about{
+        height: auto;
+        justify-content: center;
+    }
+    main {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .work {
+        justify-content: center;
+        width: 100%;
+    }
+    .work h2 {
+        border-bottom: solid 2px #4f99cc;
+        border-right: none;
+        text-align: center;
+        width: 80%;
+        justify-content: center;
+        }
+
+    .contact {
+        justify-content: center;
+        width: 100%;
+    }
+    .contact h2 {
+        width: 80%;
+        justify-content: center;
+        border-bottom: solid 2px #4f99cc;
+        border-right: none;
+        text-align: center;
+    }
+}
+    
+/* Media query for small computers ends*/
+
+/*Media query for tablet*/
+@media screen and (max-width: 768px) {
+    
+    header {
+        justify-content: center;
+    }
+    header h1 a {
+        font-size: 20px;
+        padding: 0px;
+    }
+    header nav {
+        width: 100%;
+    }
+    header nav ul {
+        width: 100%;
+        justify-content: center;
+    }
+  /*    main {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+   .about{
+        height: auto;
+        justify-content: center;
+    }
+   
+   .about h2{
+        width: 80%;
+        justify-content: center;
+        border-bottom: solid 2px #4f99cc;
+        border-right:none;
+        text-align: center;
+    }
+    .work {
+        justify-content: center;
+        width: 100%;
+    }
+    .work h2 {
+    border-bottom: solid 2px #4f99cc;
+    border-right: none;
+    text-align: center;
+    width: 80%;
+    justify-content: center;
+    }
+
+    .contact {
+        justify-content: center;
+        width: 100%;
+    }
+    .contact h2 {
+        width: 80%;
+        justify-content: center;
+        border-bottom: solid 2px #4f99cc;
+        border-right: none;
+        text-align: center;
+    }
+
+} */
+
+/*Media query for phones*/
+@media screen and (max-width:375px) {
+
+        header {
+        padding: 10px;
+        margin-top: 20px;
+        margin-bottom: 5px;
+        }
+    .hero {
+        height: auto;
+    }
+
+}
